New fxml built using oracle scene builder

--- a/src/main/resources/javafx/movements.fxml
+++ b/src/main/resources/javafx/movements.fxml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<VBox fx:controller="bme.jojartbence.ui.TruckUiController" 
-    xmlns:fx="http://javafx.com/fxml">
-    <children>
-    
-	    <Text id="trucksText" text="Trucks:" />
-	    
-	    <ListView fx:id="trucks" />
-	    
-    </children>  
-</VBox>
+
+<TitledPane animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" text="Trucks" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bme.jojartbence.ui.TruckUiController">
+  <content>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+         <children>
+            <ListView fx:id="trucks" prefHeight="375.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+         </children></AnchorPane>
+  </content>
+   <font>
+      <Font size="26.0" />
+   </font>
+</TitledPane>
